--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*!
-Theme Name: RMcC Starter Theme
+Theme Name: RMcC CV Theme
 Theme URI: https://robertmccormack.com
 Author: RMcCormack
 Author URI: https://robertmccormack.com
-Description: RMcC Starter Theme
+Description: RMcC CV Theme
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: rmcc-rtarter-theme
+Text Domain: rmcc-cv-theme
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
