--- a/views/base.twig
+++ b/views/base.twig
@@ -21,7 +21,7 @@
 
       <main role="main" id="MainContent">
         {% block content %}
-          <p>{{ __('Sorry, nothing to display here..', 'rmcc-starter-theme') }}</p>
+          <p>{{ __('Sorry, nothing to display here..', 'rmcc-cv-theme') }}</p>
         {% endblock %}
       </main>
 
