--- a/views/front-page.twig
+++ b/views/front-page.twig
@@ -20,10 +20,10 @@
                     {% endif %}
                     <div class="uk-overlay uk-overlay-primary uk-position-cover uk-flex uk-flex-center uk-flex-middle uk-light uk-text-center">
                       <div>
-                        <span class="uk-label home-hero-label">{{ __('Featured Article', 'rmcc-starter-theme') }}</span>
+                        <span class="uk-label home-hero-label">{{ __('Featured Article', 'rmcc-cv-theme') }}</span>
                         <h1 class="uk-margin-top uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold">{{post.title}}</h1>
                         <div class="uk-container uk-container-small">{{ post.preview.length(25).read_more('') }}</div>
-                        <a href="{{post.link}}" class="uk-button uk-button-default uk-margin-top">{{ __('Read more', 'rmcc-starter-theme') }}</a>
+                        <a href="{{post.link}}" class="uk-button uk-button-default uk-margin-top">{{ __('Read more', 'rmcc-cv-theme') }}</a>
                       </div>
                     </div>
                   </div>
@@ -37,9 +37,9 @@
           <div class="uk-background-muted uk-height-large uk-cover-container">
             <div class="uk-flex uk-flex-center uk-flex-middle uk-text-center uk-position-cover">
               <div>
-                <h1 class="uk-text-bold"><span>{{ __('Homepage Hero Section', 'rmcc-starter-theme') }}</span></h1>
+                <h1 class="uk-text-bold"><span>{{ __('Homepage Hero Section', 'rmcc-cv-theme') }}</span></h1>
                 <div class="uk-container uk-container-small">
-                  <p>{{ __('No posts found. This section shows your most recent sticky post. Add a post, make it sticky & dont forget to add a featured image.', 'rmcc-starter-theme') }}</p>
+                  <p>{{ __('No posts found. This section shows your most recent sticky post. Add a post, make it sticky & dont forget to add a featured image.', 'rmcc-cv-theme') }}</p>
                 </div>
               </div>
             </div>
@@ -53,7 +53,7 @@
       <div class="uk-container">
         
         {% if home_featured is not empty %}
-          <h2 class="uk-text-bold">{{ __('Featured Articles', 'rmcc-starter-theme') }}</h2>
+          <h2 class="uk-text-bold">{{ __('Featured Articles', 'rmcc-cv-theme') }}</h2>
           <div uk-slider="velocity: 5">
             <div class="uk-position-relative">
               <div class="uk-slider-container">
@@ -72,11 +72,11 @@
                             </a>
                           </div>
                           <div class="uk-width-2-3@s uk-width-3-5@m">
-                            <span class="uk-label home-featured-label">{{ __('Featured Article', 'rmcc-starter-theme') }}</span>
+                            <span class="uk-label home-featured-label">{{ __('Featured Article', 'rmcc-cv-theme') }}</span>
                             <h3 class="uk-card-title uk-margin-small-top uk-margin-remove-bottom">
                               <a class="uk-link-reset uk-text-bold" href="{{post.link}}">{{post.title}}</a>
                             </h3>
-                            <span class="uk-article-meta">{{ __('Written on', 'rmcc-starter-theme') }} {{post.date | date}}</span>
+                            <span class="uk-article-meta">{{ __('Written on', 'rmcc-cv-theme') }} {{post.date | date}}</span>
                           </div>
                         </div>
                       </div>
@@ -93,8 +93,8 @@
           </div>
         {% else %}
           <div class="uk-background-muted uk-padding">
-            <h2 class="uk-text-bold"><span>{{ __('Featured Articles', 'rmcc-starter-theme') }}</span></h2>
-            <p class="uk-margin-remove-bottom">{{ __('No posts found. This section shows your next 3 most recent sticky posts. Add some more posts, make them sticky & dont forget to add featured images.', 'rmcc-starter-theme') }}</p>
+            <h2 class="uk-text-bold"><span>{{ __('Featured Articles', 'rmcc-cv-theme') }}</span></h2>
+            <p class="uk-margin-remove-bottom">{{ __('No posts found. This section shows your next 3 most recent sticky posts. Add some more posts, make them sticky & dont forget to add featured images.', 'rmcc-cv-theme') }}</p>
           </div>
         {% endif %}
       
@@ -108,7 +108,7 @@
           <div class="uk-article uk-width-2-3@m">
             
             {% if posts is not empty %}
-              <h3 class="uk-text-bold">{{ __('More Articles', 'rmcc-starter-theme') }}</h3>
+              <h3 class="uk-text-bold">{{ __('More Articles', 'rmcc-cv-theme') }}</h3>
               <div class="archive-posts">
                 {% for post in posts %}
                   {% include 'tease.twig' %}
@@ -116,8 +116,8 @@
               </div>
             {% else %}
               <div class="uk-background-muted uk-padding">
-                <h3 class="uk-text-bold"><span>{{ __('More Articles', 'rmcc-starter-theme') }}</span></h3>
-                <p class="uk-margin-remove-bottom">{{ __('No posts found. This section shows your 4 most recent non-sticky posts. Add some more posts & add featured images.', 'rmcc-starter-theme') }}</p>
+                <h3 class="uk-text-bold"><span>{{ __('More Articles', 'rmcc-cv-theme') }}</span></h3>
+                <p class="uk-margin-remove-bottom">{{ __('No posts found. This section shows your 4 most recent non-sticky posts. Add some more posts & add featured images.', 'rmcc-cv-theme') }}</p>
               </div>
             {% endif %}
             
