--- a/views/parts/comments/comments.twig
+++ b/views/parts/comments/comments.twig
@@ -10,23 +10,23 @@
             {{comment.author.name}}
           </h4>
           <p class="uk-comment-meta uk-margin-remove-top">
-            {{ comment.date }} {{ __('at', 'rmcc-starter-theme') }} {{ comment.time }}
+            {{ comment.date }} {{ __('at', 'rmcc-cv-theme') }} {{ comment.time }}
           </p>
         </div>
       </div>
       {% if comment.author == current_user %}
         <div class="uk-position-top-right uk-position-small uk-hidden-hover">
-          <a class="uk-link-muted uk-margin-left" href="{{ function('get_edit_comment_link', comment.id) }}">{{ __('Edit', 'rmcc-starter-theme') }}</a>
+          <a class="uk-link-muted uk-margin-left" href="{{ function('get_edit_comment_link', comment.id) }}">{{ __('Edit', 'rmcc-cv-theme') }}</a>
         </div>
       {% endif %}
     </header>
     <div class="uk-comment-body">
       <div class="uk-margin-top">
         {{comment.content}}
-        <a class="uk-button uk-button-small uk-button-default uk-text-capitalize" href uk-toggle="target: #comment-reply-box{{ comment.id }}; animation: uk-animation-fade">{{ __('Reply', 'rmcc-starter-theme') }}</a>
+        <a class="uk-button uk-button-small uk-button-default uk-text-capitalize" href uk-toggle="target: #comment-reply-box{{ comment.id }}; animation: uk-animation-fade">{{ __('Reply', 'rmcc-cv-theme') }}</a>
       </div>
       <div id="comment-reply-box{{ comment.id }}" class="uk-margin-top" hidden>
-        <h4 class="uk-heading-line">{{ __('Reply to', 'rmcc-starter-theme') }} {{comment.author.name}}</h4>
+        <h4 class="uk-heading-line">{{ __('Reply to', 'rmcc-cv-theme') }} {{comment.author.name}}</h4>
         {% include "comment-form.twig" %}
       </div>
     </div>
@@ -42,26 +42,26 @@
               </div>
               <div class="uk-width-expand">
                 <h4 class="uk-comment-title uk-margin-remove">
-                  {{ __('Reply from', 'rmcc-starter-theme') }} {{comment.author.name}}
+                  {{ __('Reply from', 'rmcc-cv-theme') }} {{comment.author.name}}
                 </h4>
                 <p class="uk-comment-meta uk-margin-remove-top">
-                  {{ comment.date }} {{ __('at', 'rmcc-starter-theme') }} {{ comment.time }}
+                  {{ comment.date }} {{ __('at', 'rmcc-cv-theme') }} {{ comment.time }}
                 </p>
               </div>
             </div>
             {% if comment.author == current_user %}
               <div class="uk-position-top-right uk-position-small uk-hidden-hover">
-                <a class="uk-link-muted uk-margin-left" href="{{ function('get_edit_comment_link', comment.id) }}">{{ __('Edit', 'rmcc-starter-theme') }}</a>
+                <a class="uk-link-muted uk-margin-left" href="{{ function('get_edit_comment_link', comment.id) }}">{{ __('Edit', 'rmcc-cv-theme') }}</a>
               </div>
             {% endif %}
           </header>
           <div class="uk-comment-body">
             <div class="uk-margin-top">
               {{comment.content}}
-              <a class="uk-button uk-button-small uk-button-default uk-text-capitalize" href uk-toggle="target: #comment-reply-box{{ comment.id }}; animation: uk-animation-fade">{{ __('Reply', 'rmcc-starter-theme') }}</a>
+              <a class="uk-button uk-button-small uk-button-default uk-text-capitalize" href uk-toggle="target: #comment-reply-box{{ comment.id }}; animation: uk-animation-fade">{{ __('Reply', 'rmcc-cv-theme') }}</a>
             </div>
             <div id="comment-reply-box{{ comment.id }}" class="uk-margin-top" hidden>
-              <h4 class="uk-heading-line">{{ __('Reply to', 'rmcc-starter-theme') }} {{comment.author.name}}</h4>
+              <h4 class="uk-heading-line">{{ __('Reply to', 'rmcc-cv-theme') }} {{comment.author.name}}</h4>
               {% include "comment-form.twig" %}
             </div>
           </div>
@@ -77,26 +77,26 @@
                     </div>
                     <div class="uk-width-expand">
                       <h4 class="uk-comment-title uk-margin-remove">
-                        {{ __('Reply from', 'rmcc-starter-theme') }} {{comment.author.name}}
+                        {{ __('Reply from', 'rmcc-cv-theme') }} {{comment.author.name}}
                       </h4>
                       <p class="uk-comment-meta uk-margin-remove-top">
-                        {{ comment.date }} {{ __('at', 'rmcc-starter-theme') }} {{ comment.time }}
+                        {{ comment.date }} {{ __('at', 'rmcc-cv-theme') }} {{ comment.time }}
                       </p>
                     </div>
                   </div>
                   {% if comment.author == current_user %}
                     <div class="uk-position-top-right uk-position-small uk-hidden-hover">
-                      <a class="uk-link-muted uk-margin-left" href="{{ function('get_edit_comment_link', comment.id) }}">{{ __('Edit', 'rmcc-starter-theme') }}</a>
+                      <a class="uk-link-muted uk-margin-left" href="{{ function('get_edit_comment_link', comment.id) }}">{{ __('Edit', 'rmcc-cv-theme') }}</a>
                     </div>
                   {% endif %}
                 </header>
                 <div class="uk-comment-body">
                   <div class="uk-margin-top">
                     {{comment.content}}
-                    <a class="uk-button uk-button-small uk-button-default uk-text-capitalize" href uk-toggle="target: #comment-reply-box{{ comment.id }}; animation: uk-animation-fade">{{ __('Reply', 'rmcc-starter-theme') }}</a>
+                    <a class="uk-button uk-button-small uk-button-default uk-text-capitalize" href uk-toggle="target: #comment-reply-box{{ comment.id }}; animation: uk-animation-fade">{{ __('Reply', 'rmcc-cv-theme') }}</a>
                   </div>
                   <div id="comment-reply-box{{ comment.id }}" class="uk-margin-top" hidden>
-                    <h4 class="uk-heading-line">{{ __('Reply to', 'rmcc-starter-theme') }} {{comment.author.name}}</h4>
+                    <h4 class="uk-heading-line">{{ __('Reply to', 'rmcc-cv-theme') }} {{comment.author.name}}</h4>
                     {% include "comment-form.twig" %}
                   </div>
                 </div>
@@ -112,26 +112,26 @@
                           </div>
                           <div class="uk-width-expand">
                             <h4 class="uk-comment-title uk-margin-remove">
-                              {{ __('Reply from', 'rmcc-starter-theme') }} {{comment.author.name}}
+                              {{ __('Reply from', 'rmcc-cv-theme') }} {{comment.author.name}}
                             </h4>
                             <p class="uk-comment-meta uk-margin-remove-top">
-                              {{ comment.date }} {{ __('at', 'rmcc-starter-theme') }} {{ comment.time }}
+                              {{ comment.date }} {{ __('at', 'rmcc-cv-theme') }} {{ comment.time }}
                             </p>
                           </div>
                         </div>
                         {% if comment.author == current_user %}
                           <div class="uk-position-top-right uk-position-small uk-hidden-hover">
-                            <a class="uk-link-muted uk-margin-left" href="{{ function('get_edit_comment_link', comment.id) }}">{{ __('Edit', 'rmcc-starter-theme') }}</a>
+                            <a class="uk-link-muted uk-margin-left" href="{{ function('get_edit_comment_link', comment.id) }}">{{ __('Edit', 'rmcc-cv-theme') }}</a>
                           </div>
                         {% endif %}
                       </header>
                       <div class="uk-comment-body">
                         <div class="uk-margin-top">
                           {{comment.content}}
-                          <a class="uk-button uk-button-small uk-button-default uk-text-capitalize" href uk-toggle="target: #comment-reply-box{{ comment.id }}; animation: uk-animation-fade">{{ __('Reply', 'rmcc-starter-theme') }}</a>
+                          <a class="uk-button uk-button-small uk-button-default uk-text-capitalize" href uk-toggle="target: #comment-reply-box{{ comment.id }}; animation: uk-animation-fade">{{ __('Reply', 'rmcc-cv-theme') }}</a>
                         </div>
                         <div id="comment-reply-box{{ comment.id }}" class="uk-margin-top" hidden>
-                          <h4 class="uk-heading-line">{{ __('Reply to', 'rmcc-starter-theme') }} {{comment.author.name}}</h4>
+                          <h4 class="uk-heading-line">{{ __('Reply to', 'rmcc-cv-theme') }} {{comment.author.name}}</h4>
                           {% include "comment-form.twig" %}
                         </div>
                       </div>
@@ -147,26 +147,26 @@
                                 </div>
                                 <div class="uk-width-expand">
                                   <h4 class="uk-comment-title uk-margin-remove">
-                                    {{ __('Reply from', 'rmcc-starter-theme') }} {{comment.author.name}}
+                                    {{ __('Reply from', 'rmcc-cv-theme') }} {{comment.author.name}}
                                   </h4>
                                   <p class="uk-comment-meta uk-margin-remove-top">
-                                    {{ comment.date }} {{ __('at', 'rmcc-starter-theme') }} {{ comment.time }}
+                                    {{ comment.date }} {{ __('at', 'rmcc-cv-theme') }} {{ comment.time }}
                                   </p>
                                 </div>
                               </div>
                               {% if comment.author == current_user %}
                                 <div class="uk-position-top-right uk-position-small uk-hidden-hover">
-                                  <a class="uk-link-muted uk-margin-left" href="{{ function('get_edit_comment_link', comment.id) }}">{{ __('Edit', 'rmcc-starter-theme') }}</a>
+                                  <a class="uk-link-muted uk-margin-left" href="{{ function('get_edit_comment_link', comment.id) }}">{{ __('Edit', 'rmcc-cv-theme') }}</a>
                                 </div>
                               {% endif %}
                             </header>
                             <div class="uk-comment-body">
                               <div class="uk-margin-top">
                                 {{comment.content}}
-                                <a class="uk-button uk-button-small uk-button-default uk-text-capitalize" href uk-toggle="target: #comment-reply-box{{ comment.id }}; animation: uk-animation-fade">{{ __('Reply', 'rmcc-starter-theme') }}</a>
+                                <a class="uk-button uk-button-small uk-button-default uk-text-capitalize" href uk-toggle="target: #comment-reply-box{{ comment.id }}; animation: uk-animation-fade">{{ __('Reply', 'rmcc-cv-theme') }}</a>
                               </div>
                               <div id="comment-reply-box{{ comment.id }}" class="uk-margin-top" hidden>
-                                <h4 class="uk-heading-line">{{ __('Reply to', 'rmcc-starter-theme') }} {{comment.author.name}}</h4>
+                                <h4 class="uk-heading-line">{{ __('Reply to', 'rmcc-cv-theme') }} {{comment.author.name}}</h4>
                                 {% include "comment-form.twig" %}
                               </div>
                             </div>
