--- a/views/parts/footer.twig
+++ b/views/parts/footer.twig
@@ -4,7 +4,7 @@
     	{{sidebar_footer}}
     {% else %}
     	<p class="uk-text-small uk-text-center">
-        {{ __('Add some widgets to the Footer Widget Area in Appearance > Widgets.', 'rmcc-starter-theme') }}
+        {{ __('Add some widgets to the Footer Widget Area in Appearance > Widgets.', 'rmcc-cv-theme') }}
       </p>
     {% endif %}
   </div>
