--- a/views/parts/sidebar.twig
+++ b/views/parts/sidebar.twig
@@ -2,9 +2,9 @@
 	{% if sidebar %}
 		{{ sidebar }}
 	{% else %}
-		<h3 class="uk-text-bold widget-title">{{ __('Sidebar', 'rmcc-starter-theme') }}</h3>
+		<h3 class="uk-text-bold widget-title">{{ __('Sidebar', 'rmcc-cv-theme') }}</h3>
 		<div class="uk-tile uk-tile-small uk-tile-muted">
-			{{ __('Add some widgets to the Sidebar Widget Area in Appearance > Widgets.', 'rmcc-starter-theme') }}
+			{{ __('Add some widgets to the Sidebar Widget Area in Appearance > Widgets.', 'rmcc-cv-theme') }}
 		</div>
 	{% endif %}
 </aside>
