--- a/views/parts/tease.twig
+++ b/views/parts/tease.twig
@@ -1,10 +1,10 @@
 <article id="post-{{post.ID}}" class="uk-section uk-section-small uk-padding-remove-top item {{ post.class }}">
   <header>
     {% if function('is_sticky', post.id) %}
-      <span class="uk-label">{{ __('Featured Article', 'rmcc-starter-theme') }}</span>
+      <span class="uk-label">{{ __('Featured Article', 'rmcc-cv-theme') }}</span>
     {% endif %}
     <h2 class="uk-margin-remove-adjacent uk-margin-small-top uk-text-bold uk-margin-small-bottom"><a class="uk-link-reset" href="{{post.link}}">{{post.title}}</a></h2>
-    <p class="uk-article-meta">{{ __('Written on', 'rmcc-starter-theme') }} {{post.date | date}}. {{ __('Posted in', 'rmcc-starter-theme') }}
+    <p class="uk-article-meta">{{ __('Written on', 'rmcc-cv-theme') }} {{post.date | date}}. {{ __('Posted in', 'rmcc-cv-theme') }}
       {% for category in post.categories %}
         {% if not loop.last %}
           <a href="{{ category.link }}">{{ category }}</a>,
@@ -24,5 +24,5 @@
     </figure>
   {% endif %}
   <p>{{ post.preview.read_more('') }}</p>
-  <a href="{{post.link}}" class="uk-button uk-button-default">{{ __('Read more', 'rmcc-starter-theme') }}</a>
+  <a href="{{post.link}}" class="uk-button uk-button-default">{{ __('Read more', 'rmcc-cv-theme') }}</a>
 </article>
