--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*!
-Theme Name: RMcC CV Theme
+Theme Name: Minimal Clean Theme
 Theme URI: https://robertmccormack.com
 Author: RMcCormack
 Author URI: https://robertmccormack.com
-Description: RMcC CV Theme
+Description: Minimal Clean Wordpress Theme
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: rmcc-cv-theme
+Text Domain: minimal-clean-theme
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
