--- a/views/front/front-page.twig
+++ b/views/front/front-page.twig
@@ -15,7 +15,7 @@
 
   <section id="FrontHero" class="uk-section uk-section-small uk-padding-remove-top">
     <div class="uk-inline">
-      <img class="hero-image" data-src="https://via.placeholder.com/1000x560.png" data-width height="400" alt="" uk-img>
+      <img class="hero-image" data-src="https://picsum.photos/1000/560" width="1000" data="560" alt="" uk-img>
       <div class="uk-position-cover">
         <div class="uk-padding-large uk-position-bottom-left">
           <div class="uk-background-default text-padding uk-margin-bottom">
